crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_equals.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"</=\"####)"
---
[
    Token {
        data: "=",
        attrs: None,
        kind: Comment,
        is_implied: false,
    },
    Token {
        data: "",
        attrs: None,
        kind: CommentEnd,
        is_implied: false,
    },
]
